# python_template

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
