[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Python template for side projects."
authors = ["Javier de Santiago <jasampa3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
result = "^0.14.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
